Cleanup (warnings; typos; annotations; formatting)
GitOrigin-RevId: 7fc6f3908a4474797c71351ad08322b0d94296df